# video-captioning-evaluation

./: .gitignore  LICENSE  README.md  data_caching.py  evaluation.py  pyproject.toml  requirements.txt  training.py  visualization.py
data/: README.md
libs/: model.py  preprocess.py  sentence_vector.py
