[tool.poetry]
name = "video-captioning-evaluation"
version = "0.1.0"
description = ""
authors = ["sehandev"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_captioning_evaluation"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
