[tool.poetry]
name = "video-captioning-evaluation"
version = "0.4.0"
description = ""
authors = ["sehandev"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_captioning_evaluation"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
transformers = "^4.25.1"
torch = "^1.13.1"
seaborn = "^0.12.2"
pytorch-lightning = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
